<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    tools:context=".LayoutActivitySample2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:background="@color/BG"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="200dp">

            <ImageView
                android:id="@+id/Sooya"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/bg3_text"
                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_avt"
                tools:ignore="ImageContrastCheck">

            </ImageView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/KimJisoo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/message_string4"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="9dp">

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/message_string5"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <Button
            android:id="@+id/Editprofile"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/bg2_text"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/button_string4"
            app:backgroundTint="@color/BG_Editprofile"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Showmyinstagram"
                    android:layout_width="368dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/bg3_text"
                    android:drawableLeft="@mipmap/ic_instagram"
                    android:gravity="left|center_vertical"
                    android:text="@string/button_string6"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:backgroundTint="@color/BG_Button1"
                    android:alpha="0.7"/>

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="149dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/BG_Button1"
                    app:srcCompat="@mipmap/ic_show_link"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:alpha="0.7"
                    android:autoLink="web"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Showmyfacebook"
                    android:layout_width="368dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/bg3_text"
                    android:drawableLeft="@mipmap/ic_fb"
                    android:gravity="left|center_vertical"
                    android:text="@string/button_string5"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:backgroundTint="@color/BG_Button"
                    android:alpha="1.0"/>

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="149dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:alpha="1.0"
                    android:background="@color/BG_Button"
                    app:srcCompat="@mipmap/ic_show_link"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:autoLink="web"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_string3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>