<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    tools:context=".LayoutActivitySample"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/MediumAquaMarine"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ExtraText,OnClick"
        tools:layout_editor_absoluteX="0dp"
        android:onClick="hideKeyboard">

        <TextView
            android:id="@+id/Welcome"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/message_string"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:background="@drawable/shadow"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/message_string2"
            android:shadowColor="@color/white"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
             android:inputType="text"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="248dp"
            android:layout_height="12dp">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:background="@drawable/shadow"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/message_string1"
            android:shadowColor="@color/white"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            android:inputType="textPassword"
            android:imeOptions="actionDone" />

        <Button
            android:id="@+id/JoinorLogin"
            style="@style/MaterialAlertDialog.Material3.Title.Text.CenterStacked"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/button_string2"
            android:textAppearance="@style/MaterialAlertDialog.Material3.Title.Text"
            android:textColor="@color/MediumAquaMarine"
            android:textColorLink="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/white"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            />

        ...
        android:imeOptions="actionDone"
        />

        android:background="@drawable/bg1_text"

        android:text="@drawable/bg1_text"

        android:background="@drawable/bg_text"

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
